# AI-Stock-Market-Agent-with-CrewAI

./: README.md  pyproject.toml
memory/: chroma.sqlite3  long_term_memory_storage.db
output/: decision.md  research_report.json  trending_companies.json
src/stock/: crew.py  main.py
src/stock/config/: agents.yaml  tasks.yaml
src/stock/tools/: push_tool.py
