[project]
name = "stock"
version = "0.1.0"
description = "stock using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
stock = "stock.main:run"
run_crew = "stock.main:run"
train = "stock.main:train"
replay = "stock.main:replay"
test = "stock.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
